Updated the default greetings to the second version

--- a/catalog-service.yml
+++ b/catalog-service.yml
@@ -1,2 +1,2 @@
 polar:
-  greeting: "Welcome to the catalog - greeting send by the configuration server"
+  greeting: "Welcome to the second version of the default catalog - greeting send by the configuration server"
